compiler: Avoid invalid C++ code generation

inlineConsoleMethod's stringConversion needs to create a string, so that
we can later append to it. Because we were missing parentheses, this did
not happen, and we would end up with code looking like
u']'.append(...)
which obviously isn't valid C++. Fix this by always adding parentheses
around the expression.

Found while trying to prove that QTBUG-109279 was fixed.

Task-number: QTBUG-109279
Change-Id: I67fce5b2c1f1460a5d6b617824f3c36f9804ea76
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 69fb18357c8495b58dba04960629f1f21eed3618)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 95e6b6314eaef234fe59833963c0b212f5a69b23)