src/qmlcompiler/qqmljscodegenerator.cpp
@@ -2197,8 +2197,8 @@ bool QQmlJSCodeGenerator::inlineConsoleMethod(const QString &name, int argc, int
             return convertStored(actual, read, consumedRegisterVariable(argv + i));
         } else if (actual->accessSemantics() == QQmlJSScope::AccessSemantics::Sequence) {
             addInclude(u"QtQml/qjslist.h"_s);
-            return u"u'[' + QJSList(&"_s + registerVariable(argv + i)
-                    + u", aotContext->engine).toString() + u']'"_s;
+            return u"(u'[' + QJSList(&"_s + registerVariable(argv + i)
+                    + u", aotContext->engine).toString() + u']')"_s;
         } else {
             reject(u"converting arguments for console method to string"_s);
             return QString();
